# insighta-cli

./: .gitignore  CLAUDE.md  README.ai.md  README.md  pyproject.toml
sbi/: api.py  cli.py  i18n.py  parser.py
scripts/: calc_budget.py
templates/: config.yaml  memo.csv  project.yaml  seed.csv
