[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insighta-cli"
version = "0.1.0"
description = "CLI tool for bulk portfolio registration to Insighta Cloud"
readme = "README.md"
license = "CC-BY-NC-4.0"
requires-python = ">=3.10"
authors = [
    { name = "insighta cloud Inc." },
]
keywords = ["insighta", "portfolio", "cli", "sbi", "trade-history"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "beautifulsoup4",
    "rich",
    "rich-click",
    "requests",
    "pyyaml",
]

[project.scripts]
insighta = "sbi.cli:cli"

[project.urls]
Homepage = "https://insighta.cloud"
Repository = "https://github.com/insighta-cloud/insighta-cli"

[tool.hatch.build.targets.wheel]
packages = ["sbi"]
